# 6.s063_Scanner

./: CMakeLists.txt  README.md
contact_image_sensor/Arduino Code/EncoderIntTest/: EncoderIntTest.ino
contact_image_sensor/Arduino Code/EncoderTest/: EncoderTest.ino
contact_image_sensor/Arduino Code/Scan_Line/: Scan_Line.ino
contact_image_sensor/Arduino Code/Server_Test/: Server_Test.ino
contact_image_sensor/Arduino Code/Test_1/: Test_1.ino
contact_image_sensor/Wifi/: Cal_Check.py  Calibrate.py  Scrape.py  Serial.py  draw.py  image.txt  test.txt
src/: Makefile  finger.cpp  finger.h  getTouch.cpp  getTouch.h  main.cpp  processTouch.h  writeFile.cpp  writeFile.h
touch_sensing/: CMakeLists.txt
touch_sensing/src/: finger.h  getTouch.cpp  getTouch.h  main.cpp  writeFile.cpp  writeFile.h
